--- a/packages/elements/src/components/ino-icon/ino-icon.scss
+++ b/packages/elements/src/components/ino-icon/ino-icon.scss
@@ -3,6 +3,11 @@
 @use '../base/theme';
 
 :host {
+  /**
+   * @prop --ino-icon-width: Width of the icon. [size:2:em]
+   * @prop --ino-icon-height: Height of the icon. [size:2:em]
+   * @prop --ino-icon-color: Color of the icon. [color:#3d40f5]
+   */
   --icon-width: var(--ino-icon-width, 1em);
   --icon-height: var(--ino-icon-height, 1em);
   --icon-color: var(
