--- a/packages/elements/src/components/ino-list-item/ino-list-item.scss
+++ b/packages/elements/src/components/ino-list-item/ino-list-item.scss
@@ -5,6 +5,18 @@
 @include list.deprecated-core-styles;
 
 ino-list-item {
+  /**
+   * @prop --ino-list-item-selected-color: Text color of a selected list item. [color:#4655ff]
+   * @prop --ino-list-item-selected-background-color: Background color of a selected list item. [color:#f6fafe]
+   * @prop --ino-list-item-selected-background-color-hover: Background color of a selected list item on hover. [color:#e2ecff]
+   * @prop --ino-list-item-selected-background-color-active: Background color of a selected list item if active. [color:#e2ecff]
+   * @prop --ino-list-item-selected-background-color-focus: Background color of a selected list item if focused. [color:#e2ecff]
+   * @prop --ino-list-item-deselected-color: Text color of a deselected list item. [color:#39383c]
+   * @prop --ino-list-item-deselected-background-color: Background color of a deselected list item. [color:rgba(255, 255, 255, 0)]
+   * @prop --ino-list-item-deselected-background-color-hover: Background color of a deselected list item on hover. [color:#f4f4f7]
+   * @prop --ino-list-item-deselected-background-color-active: Background color of a deselected list item if active. [color:#f4f4f7]
+   * @prop --ino-list-item-deselected-background-color-focus: Background color of a deselected list item if focused. [color:#f4f4f7]
+   */
   --list-item-selected-color: var(
     --ino-list-item-selected-color,
     #{theme.$p-5}
