--- a/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
+++ b/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
@@ -4,6 +4,12 @@
 @use '../base/typography-new' as typography;
 
 ino-nav-item {
+  /**
+   * @prop --ino-nav-item-color: Inactive color of icon. [color:#39383c]
+   * @prop --ino-nav-item-color-active: Active color of icon. [color:#4655ff]
+   * @prop --ino-nav-item-background-color: Inactive color of the background of one item. [color:#fff]
+   * @prop --ino-nav-item-background-color-active: Active color of the background of one item. [color:#dfdee6]
+   */
   --nav-item-color: var(--ino-nav-item-color, #{theme.$n-11});
   --nav-item-color-active: var(--ino-nav-item-color-active, #{theme.$p-5});
   --nav-item-background-color: var(
