--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -40,6 +40,12 @@ $snackbar-color-map-by-type: (
 }
 
 ino-snackbar {
+  /**
+   * @prop --ino-snackbar-top: Distance to the top edge. [text:0px]
+   * @prop --ino-snackbar-right: Distance to the right edge. [text:0px]
+   * @prop --ino-snackbar-bottom: Distance to the bottom edge. [text:auto]
+   * @prop --ino-snackbar-left: Distance to the left edge. [text:auto]
+   */
   $top: var(--ino-snackbar-top, 0);
   $right: var(--ino-snackbar-right, 0);
   $bottom: var(--ino-snackbar-bottom, auto);
