--- a/packages/elements/src/components/ino-textarea/ino-textarea.scss
+++ b/packages/elements/src/components/ino-textarea/ino-textarea.scss
@@ -5,6 +5,11 @@
 @use '../base/new-theme' as theme;
 
 ino-textarea {
+  /**
+   * @prop --ino-textarea-outline-color: Outline color of the textarea. [color:#4655ff]
+   * @prop --ino-textarea-caret-color: Color of the caret. [color:#4655ff]
+   * @prop --ino-textarea-label-color: Color of the label. [color:#4655ff]
+   */
   --textarea-outline-color: var(--ino-textarea-outline-color, #{theme.$p-5});
   --textarea-caret-color: var(--ino-textarea-caret-color, #{theme.$p-5});
   --textarea-label-color: var(--ino-textarea-label-color, #{theme.$p-5});
