--- a/packages/storybook/src/stories/ino-option/ino-option.scss
+++ b/packages/storybook/src/stories/ino-option/ino-option.scss
@@ -1,7 +1,12 @@
-.story-ino-option {
-  padding: 40px;
+.sbdocs.sbdocs-content:has(#anchor--input-ino-option--default) {
+  [scale] {
+    width: 400px;
+    display: flex;
+    justify-content: center;
 
-  ino-select {
-    margin-bottom: 30px;
+    .innerZoomElementWrapper > div > div {
+      width: 250px;
+      overflow: unset;
+    }
   }
 }
