refactor(storybook|ino-progress-bar): update stories

--- a/packages/storybook/src/stories/ino-progress-bar/ino-progress-bar.scss
+++ b/packages/storybook/src/stories/ino-progress-bar/ino-progress-bar.scss
@@ -1,17 +1,5 @@
-.story-ino-progress-bar {
-  .progress-bar-example {
-    display: flex;
-    flex-direction: row;
+.sbdocs.sbdocs-content:has(#anchor--notification-ino-progress-bar--default) {
+  [scale] {
     width: 100%;
-    justify-content: space-around;
-    align-items: center;
-
-    ino-progress-bar {
-      width: 80%;
-    }
-
-    ino-input-file {
-      width: 10%;
-    }
   }
 }
