--- a/packages/storybook/src/stories/ino-range/ino-range.scss
+++ b/packages/storybook/src/stories/ino-range/ino-range.scss
@@ -1,14 +1,5 @@
-.story-range {
-  .flex-parent {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-
-    > .flex-child {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0 20px;
-    }
+.sbdocs.sbdocs-content:has(#anchor--input-ino-range--default) {
+  [scale] {
+    width: 100%;
   }
 }
