--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -55,7 +55,7 @@ ino-markdown-editor {
     grid-template-columns: auto auto;
     justify-content: space-between;
     border-radius: $border-radius;
-    background-color: theme.$n-1;
+    background-color: rgba(theme.$n-1, 0.6);
     padding: 10px 20px;
     margin-bottom: 10px;
   }
@@ -63,7 +63,7 @@ ino-markdown-editor {
   .toolbar__action-button {
     --ino-icon-color-primary: #{theme.$n-9};
     border: 0;
-    margin: 0;
+    margin: 0 2px;
     padding: 1px 2px;
     border-radius: $border-radius;
     background-color: transparent;
@@ -72,13 +72,13 @@ ino-markdown-editor {
     &:hover,
     &--active {
       --ino-icon-color-primary: #{theme.$p-6};
-      background-color: theme.$p-2;
-      color: theme.$p-6;
+      background-color: theme.$white;
+      color: theme.$p-2;
       cursor: pointer;
     }
 
     &--active {
-      box-shadow: inset 0 3px 6px rgba(theme.$p-7, 0.16);
+      box-shadow: 0 2px 6px theme.$n-4;
     }
 
     ino-icon {
