--- a/packages/storybook/src/stories/ino-tooltip/ino-tooltip.scss
+++ b/packages/storybook/src/stories/ino-tooltip/ino-tooltip.scss
@@ -12,3 +12,22 @@
     margin: 12px 24px;
   }
 }
+
+.sbdocs.sbdocs-content:has(#anchor--notification-ino-tooltip--default) {
+  [scale] {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 110px;
+
+    #story--notification-ino-tooltip--color-scheme-inner #root-inner {
+      display: flex;
+      gap: 15px;
+    }
+
+    h4 {
+      margin-top: 48px;
+    }
+  }
+}
