--- a/packages/elements/src/components/ino-dialog/ino-dialog.scss
+++ b/packages/elements/src/components/ino-dialog/ino-dialog.scss
@@ -65,11 +65,11 @@ $material-dialog-box-shadow: 0px 0px 22px rgba(93, 91, 105, 0.35);
     display: flex;
     align-items: center;
     gap: 2rem;
+  }
 
-    ino-icon {
-      --icon-width: 2rem;
-      --icon-height: 2rem;
-    }
+  .header-icon {
+    --icon-width: 2rem;
+    --icon-height: 2rem;
   }
 
   .mdc-dialog .mdc-dialog__surface header h1 {
