refactor: add CSS-Variables to adjust font-sizes

--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -4,6 +4,10 @@
 /**
   @prop --ino-markdown-editor-min-height: min-height of text editor. Default value is `100px`.
   @prop --ino-markdown-editor-max-height: max-height of text editor Default value is `none`.
+  @prop --ino-markdown-editor-paragraph-font-size: Font size of paragraph text. Default value is `16px`.
+  @prop --ino-markdown-editor-h1-font-size: Font size of H1 headers. Default value is `32px`.
+  @prop --ino-markdown-editor-h2-font-size: Font size of H2 headers. Default value is `28px`.
+
 */
 
 // specific styles for the markdown editor dialog window that opens when having text selected and clicking the "create link" button
@@ -149,6 +153,15 @@ ino-markdown-editor {
     border-radius: 4px;
     border: 1px solid theme.$n-2;
     color: rgba(0, 0, 0, 0.87);
+    font-size: var(--ino-markdown-editor-paragraph-font-size, 1rem);
+
+    h1 {
+      font-size: var(--ino-markdown-editor-h1-font-size, 2rem);
+    }
+
+    h2 {
+      font-size: var(--ino-markdown-editor-h2-font-size, 1.75rem);
+    }
 
     &:hover:not(&-focused) {
       border-color: theme.$n-4;
