feat: add support for custom element and ino-icon in icon-slot

--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -119,7 +119,7 @@ ino-snackbar {
     height: 30px;
     width: 30px;
 
-    &.slot-present {
+    &.custom-icon {
       background-color: transparent;
     }
 
