--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -35,10 +35,6 @@ $snackbar-color-map-by-type: (
   }
 }
 
-@mixin showCloseButton() {
-  display: inline-flex;
-}
-
 ino-snackbar {
   /**
   * @prop --ino-snackbar-top: Distance to the top edge
@@ -79,10 +75,6 @@ ino-snackbar {
     max-width: 350px;
     padding: 16px 45px 16px 25px;
 
-    &:hover ~ .ino-snackbar-close-btn {
-      @include showCloseButton;
-    }
-
     // mdc pseudo-element blocks interaction
     &:before {
       display: none;
@@ -90,7 +82,7 @@ ino-snackbar {
   }
 
   .ino-snackbar-close-btn {
-    display: none;
+    display: inline-block;
     position: absolute;
     top: 0;
     right: 0;
@@ -105,10 +97,6 @@ ino-snackbar {
     --ino-icon-button-icon-color: black !important;
     --ino-icon-button-size: 22px;
     --ino-icon-button-icon-size: 8px;
-
-    &:hover {
-      @include showCloseButton;
-    }
   }
 
   .ino-snackbar-icon-container {
