feat(elements|ino-snackbar): refactor role property and use ino-button dense version

--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -126,6 +126,10 @@ ino-snackbar {
       color: #74758b;
     }
 
+    .ino-snackbar-action-container {
+      margin-top: .5rem;
+    }
+
     .ino-snackbar-action-btn {
       border: none;
       background-color: transparent;
