feat(elements|ino-snackbar): fix format

--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -127,7 +127,7 @@ ino-snackbar {
     }
 
     .ino-snackbar-action-container {
-      margin-top: .5rem;
+      margin-top: 0.5rem;
     }
 
     .ino-snackbar-action-btn {
