chore(landingpage): fix various issues e.g. jumpy layout (#1150)
* feat(landingpage) prevent displaying slotted components before parent component is not loaded

* fix(landingpage) removed old redirect that was causing problems in dev mode when using deep links

* fix(landingpage) manifest url

* feat(landingpage) removed warnings due to image sizing + inline styles -> css classes

* feat(landingpage) improved storybook url handling on library page

* fix(landingpage) removed error due to wrong usage of ino-list on home page

* feat(landingpage) lodash-es instead of lodash

* fix(landingpage) fixed format

* fix(landingpage) fix translation hook (wrong type)

* feat(landingpage) changes after code review

---------

Co-authored-by: Jan-Niklas Voß <jan-niklas.voss@inovex.de>

--- a/packages/landingpage/styles/globals.css
+++ b/packages/landingpage/styles/globals.css
@@ -47,6 +47,14 @@ ino-chip * {
   box-sizing: initial;
 }
 
+ino-select:not(.hydrated) * {
+  display: none;
+}
+
+ino-popover:not(.hydrated) * {
+  display: none !important;
+}
+
 .section-container {
   display: flex;
   flex-direction: column;
