refactor(elements|ino-nav-menu): fix not-rendering if component lies further up in DOM & show functionality better - add `sectionsRenderObserver` before initiating of `ino-nav-menu` section points - add switch to shrink playground and show stickiness of `ino-nav-menu` - add active-section change

--- a/packages/storybook/src/stories/ino-nav-menu/ino-nav-menu.scss
+++ b/packages/storybook/src/stories/ino-nav-menu/ino-nav-menu.scss
@@ -7,11 +7,15 @@
     width: 100%;
     max-height: 250px;  
   }
+
+  [scale]:has(.show-full-height) {
+    max-height: unset;  
+  }
   
   [scale] .story-ino-nav-menu {
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: stretch;
     gap: 50px;
