refactor: handle correct snackbar trigger

--- a/packages/storybook/src/stories/ino-snackbar/ino-snackbar.scss
+++ b/packages/storybook/src/stories/ino-snackbar/ino-snackbar.scss
@@ -8,7 +8,7 @@
     overflow: visible;
     padding: 10px;
   }
-
+  //TODO: fix styling of snackbar on the top right of window
   .snackbar-template {
     position: absolute;
     inset: -200px;
