increase vertical spacing of list entries

--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -207,6 +207,10 @@ ino-markdown-editor {
       p {
         margin: 0;
       }
+
+      li {
+        margin: 2px 0;
+      }
     }
 
     :is(ul, ol)[data-type='taskList'] {
