refactor(storybook|ino-input): fix-stories

--- a/packages/storybook/src/stories/ino-input/ino-input.scss
+++ b/packages/storybook/src/stories/ino-input/ino-input.scss
@@ -4,7 +4,8 @@
   }
 
   #story--input-ino-input--states-inner #root-inner,
-  #story--input-ino-input--labels-inner #root-inner {
+  #story--input-ino-input--labels-inner #root-inner,
+  #story--input-ino-input--dense-inner #root-inner {
     display: flex;
     flex-direction: column;
     gap: 15px;
