--- a/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
+++ b/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
@@ -28,10 +28,10 @@ ino-nav-item {
     height: 60px;
     background-color: var(--nav-item-background-color);
     color: var(--nav-item-color);
-    font-size: 14px;
+    @include typography.typo(label-l);
 
-    .mdc-list-item__secondary-text {
-      font-size: 12px;
+    &__secondary-text {
+      @include typography.typo(label-l);
     }
 
     // icon
@@ -75,8 +75,6 @@ ino-nav-item {
   &.mobile-nav-item {
     .mdc-deprecated-list-item,
     ino-list-item .mdc-deprecated-list-item {
-      @include typography.typo(label-s);
-
       &__graphic {
         margin-right: 0px;
       }
@@ -85,8 +83,8 @@ ino-nav-item {
       ::slotted(ino-icon),
       ino-icon,
       .ino-list-item__icon {
-        --icon-width: 16px;
-        --icon-height: 16px;
+        --icon-width: 18px;
+        --icon-height: 18px;
       }
     }
   }
